--- a/26.45BTC_wallet.dat.md
+++ b/26.45BTC_wallet.dat.md
@@ -4,7 +4,7 @@
 
 wallet address - **[1LX27PZRjDyDngtUEqU79NHBT5Y2RYbKnH](https://www.blockchain.com/btc/address/1LX27PZRjDyDngtUEqU79NHBT5Y2RYbKnH)**
 
-## [Buy wallet.dat with 26.45 BTC](https://satoshidisk.com/pay/CBJB9M)
+## [Buy wallet.dat with 26.45 BTC](https://satoshidisk.com/pay/CBUqoH)
 
 ### wallet screenshots
 
@@ -12,4 +12,4 @@ wallet address - **[1LX27PZRjDyDngtUEqU79NHBT5Y2RYbKnH](https://www.blockchain.c
 ![26.45 BTC wallet.dat screenshot 2](https://i.imgur.com/l1sOekb.png)
 
 
-## [Buy wallet.dat with 26.45 BTC](https://satoshidisk.com/pay/CBJB9M)
+## [Buy wallet.dat with 26.45 BTC](https://satoshidisk.com/pay/CBUqoH)
