--- a/575.99BTC_wallet.dat.md
+++ b/575.99BTC_wallet.dat.md
@@ -4,7 +4,7 @@
 
 wallet address - **[1HZNsUqQxKVLmfPfCAzLwrnVDzx8CxwxnM](https://www.blockchain.com/btc/address/1HZNsUqQxKVLmfPfCAzLwrnVDzx8CxwxnM)**
 
-## [Buy wallet.dat with 575.99 BTC](https://satoshidisk.com/pay/CBJBMt)
+## [Buy wallet.dat with 575.99 BTC](https://satoshidisk.com/pay/CBUqtV)
 
 ### wallet screenshots
 
@@ -14,4 +14,4 @@ wallet address - **[1HZNsUqQxKVLmfPfCAzLwrnVDzx8CxwxnM](https://www.blockchain.c
 [wallet.dat demonstration video](https://streamable.com/r9k16)
 
 
-## [Buy wallet.dat with 575.99 BTC](https://satoshidisk.com/pay/CBJBMt)
+## [Buy wallet.dat with 575.99 BTC](https://satoshidisk.com/pay/CBUqtV)
