--- a/25.99BTC_wallet.dat.md
+++ b/25.99BTC_wallet.dat.md
@@ -4,10 +4,10 @@
 
 wallet address - **[1JSTCtS21CFqBz2ZQT4X9sTeCoy58FwtDj](https://www.blockchain.com/btc/address/1JSTCtS21CFqBz2ZQT4X9sTeCoy58FwtDj)**
 
-## [Buy wallet.dat with 25.99 BTC](https://satoshidisk.com/pay/CBJB80)
+## [Buy wallet.dat with 25.99 BTC](https://satoshidisk.com/pay/CBUqne)
 
 ### wallet screenshots
 ![25.99 BTC wallet.dat screenshot 1](https://i.imgur.com/O4IPAum.png)
 ![25.99 BTC wallet.dat screenshot 2](https://i.imgur.com/GcntCeO.png)
 
-## [Buy wallet.dat with 25.99 BTC](https://satoshidisk.com/pay/CBJB80)
+## [Buy wallet.dat with 25.99 BTC](https://satoshidisk.com/pay/CBUqne)
