--- a/28.32BTC_wallet.dat.md
+++ b/28.32BTC_wallet.dat.md
@@ -4,10 +4,10 @@
 
 wallet address **[14MSmvaybM5G7HeobaGGXE4Yv2F9henmTJ](https://www.blockchain.com/btc/address/14MSmvaybM5G7HeobaGGXE4Yv2F9henmTJ)**
 
-## [Buy wallet.dat with 28.32 BTC](https://satoshidisk.com/pay/CBJBBi)
+## [Buy wallet.dat with 28.32 BTC](https://satoshidisk.com/pay/CBUqpl)
 
 ### wallet screenshots 
 ![28.32 BTC wallet.dat screenshot 1](https://i.imgur.com/iEbD3YA.png)
 ![28.32 BTC wallet.dat screenshot 2](https://i.imgur.com/iPcZXBS.png)
 
-## [Buy wallet.dat with 28.32 BTC](https://satoshidisk.com/pay/CBJBBi)
+## [Buy wallet.dat with 28.32 BTC](https://satoshidisk.com/pay/CBUqpl)
