--- a/31.48BTC_wallet.dat.md
+++ b/31.48BTC_wallet.dat.md
@@ -4,10 +4,10 @@
 
 wallet address - **[1HvhpaLmyhKHEupJRJcrZAX6UXmmTpZuHL](https://www.blockchain.com/btc/address/1HvhpaLmyhKHEupJRJcrZAX6UXmmTpZuHL)**
 
-## [Buy wallet.dat with 31.48 BTC](https://satoshidisk.com/pay/CBJBF0)
+## [Buy wallet.dat with 31.48 BTC](https://satoshidisk.com/pay/CBUqrB)
 
 ### wallet screenshots
 ![31.48 BTC wallet.dat screenshot 1](https://i.imgur.com/XYUqiWY.png)
 ![31.48 BTC wallet.dat screenshot 2](https://i.imgur.com/D7fZH3P.png)
 
-## [Buy wallet.dat with 31.48 BTC](https://satoshidisk.com/pay/CBJBF0)
+## [Buy wallet.dat with 31.48 BTC](https://satoshidisk.com/pay/CBUqrB)
